tests/res/compile_errors/super_outside_child.say
type A {
    pub fn getX() {
        return super.x; // error: Cannot use 'super' outside of a child type method
    }
}

A();
